added notebook with integer,choice,uniform,triangular,binomial,normal - needs to be incorporated inot main notebook

--- a/numpy-random.ipynb
+++ b/numpy-random.ipynb
@@ -36,6 +36,7 @@
    "source": [
     "### Random Numbers\n",
     "#### Intro  \n",
+    "Random numbers are useful for a variety of purposes, such as generating data encryption keys, simulating and modeling complex phenomena and for selecting random samples from larger data sets. They have also been used aesthetically, for example in literature and music, and are of course ever popular for games and gambling. When discussing single numbers, a random number is one that is drawn from a set of possible values, each of which is equally probable, i.e., a uniform distribution. When discussing a sequence of random numbers, each number drawn must be statistically independent of the others.--from ranom.org rephrase and cite\n",
     "#### True random\n",
     "#### Pseudo random\n",
     "\n",
@@ -260,6 +261,14 @@
     "\n",
     "zipf(a[, size]) Draw samples from a Zipf distribution."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55763101-5081-48b0-84cd-a1af4a6da3d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
